--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "<Admonition type=\"note\" title=\"Notes\">\n",
     "- You can specify all Qiskit Runtime options in local testing mode.  However, all options except shots are ignored when run on a local simulator.\n",
-    "- It is recommended that you install Qiskit Aer before using fake backends or Aer simulators by running `pip install qiskit-aer`. The fake backends use Aer simulators under the cover if available, to take advantage of its performance.\n",
+    "- It is recommended that you install Qiskit Aer before using fake backends or Aer simulators by running `pip install qiskit-aer`. The fake backends use Aer simulators under the cover if available, to take advantage of their performance.\n",
     "</Admonition>\n",
     "\n",
     "\n",
