--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -9,4 +9,4 @@ This page is for open-source previews only.
 
 If you don't see your course in the following list, edit `learning/index.mdx` and restart the preview.
 
-* [Quantum computing in practice](/learning/courses/quantum-computing-in-practice)
+- [Quantum computing in practice](/learning/courses/quantum-computing-in-practice)
