--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -811,8 +811,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We can define the edge_coloring map so that Rzz gates are positioned next to SWAP gates to exploit CX cancellations\n",
-    "# We use greedy edge coloring to color the edges of the graph in the rustworkx. This coloring is used to order the Rzz gates in the circuit.\n",
+    "# We can define the edge_coloring map so that RZZ gates are positioned next to SWAP gates to exploit CX cancellations\n",
+    "# We use greedy edge coloring to color the edges of the graph in the rustworkx. This coloring is used to order the RZZ gates in the circuit.\n",
     "\n",
     "edge_coloring_idx = rx.graph_greedy_edge_color(graph_100)\n",
     "edge_coloring = {\n",
@@ -1186,7 +1186,7 @@
    "id": "38aadfcb-aec9-4dbb-a9d3-319239eae196",
    "metadata": {},
    "source": [
-    "The following graph is the result of the standard expectation value."
+    "The following cost is the result of the standard expectation value."
    ]
   },
   {
