--- a/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
+++ b/docs/tutorials/quantum-approximate-optimization-algorithm.ipynb
@@ -17,7 +17,7 @@
    "id": "bc51e7bf-e582-49ba-93f8-035624d56ccf",
    "metadata": {},
    "source": [
-    "# Solve utility-scale quantum optimization problems\n",
+    "# Quantum approximate optimization algorithm\n",
     "*Usage estimate: 8 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3f28a422-805c-4d3d-b5f6-62539e9133bd",
    "metadata": {},
    "outputs": [
@@ -431,8 +431,7 @@
     }
    ],
    "source": [
-    "# QiskitRuntimeService.save_account(channel=\"ibm_quantum\", token=\"<MY_IBM_QUANTUM_TOKEN>\", overwrite=True, set_as_default=True)\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")\n",
@@ -1422,7 +1421,7 @@
    "version": "3"
   },
   "platform": "cloud",
-  "title": "Solve utility-scale quantum optimization problems"
+  "title": "Quantum approximate optimization algorithm"
  },
  "nbformat": 4,
  "nbformat_minor": 5
