--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -5,12 +5,13 @@ description: Browse tutorials on utility-scale workflows or Qiskit capabilities 
 
 # Tutorials
 
-Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. You can browse tutorials by workflow or capability in the left navigation bar. The section on utility-scale workflows contains end-to-end examples of using the quantum computer to solve a real-world problem. We focus on examples of algorithms which are promising candidates for achieving computational advantange of a quantum computer versus a classical computer. The section on Qiskit capabilities contains examples of leveraging the latest and most advanced techniques present in Qiskit and its ecosystem to improve part or the whole of a particular workflow.
+Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. You can browse tutorials by workflow or capability in the left navigation bar. The section on workflows towards utility contains end-to-end examples of using the quantum computer to solve a real-world problem. We focus on examples of algorithms which are promising candidates for achieving computational advantange of a quantum computer versus a classical computer. The section on Qiskit capabilities contains examples of leveraging the latest and most advanced techniques present in Qiskit and its ecosystem to improve part or the whole of a particular workflow.
 
 
-## Explore utility-scale workflows
+## Explore workflows towards utility
 
 Tutorials in this section cover large scale demonstrations of quantum algorithms. These are classified into three categories: Verifiable sampling algorithms, Observable estimation and Fault tolerant algorithms. Verifiable sampling algorithms are algorithms which return an answer which can be efficiently verified to be correct. Examples of algorithms in this category are optimization algorithms, peaked random circuits and ground state estimation algorithms based on the variational principle. The Observable estimation section includes examples where the quantum computer is used to obtain the error mitigated expectation value of large-scale observables, which in some cases can be a challenging task for classical computers. The Fault tolerant algorithms section collects examples of algorithms which are too resource intensive to be executed today but which have guarantees of advantage compared to their classical counterparts.
+
 
 <details>
   <summary>**Verifiable sampling algorithms**</summary>
