fix typos in index.md

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -77,7 +77,7 @@ Workload optimization focuses on either efficient orchestration of classical and
 
 * [Qiskit AI-powered transpiler service introduction](/docs/tutorials/ai-transpiler-introduction)
 
-* [Transpilation Optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre
+* [Transpilation Optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre)
 
 * [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings)
 
@@ -97,7 +97,7 @@ Addons enable advanced circuit manipulation —such as cutting, backpropagating 
 
 * [Wire cutting for expectation values estimation](/docs/tutorials/wire-cutting)
 
-* [Circuit cutting for periodic boundary conditions(/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting)
+* [Circuit cutting for periodic boundary conditions](/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting)
 
 * [Circuit cutting for depth reduction](/docs/tutorials/depth-reduction-with-circuit-cutting)
 
