Remove staging link

--- a/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
+++ b/learning/courses/quantum-computing-in-practice/running-quantum-circuits.ipynb
@@ -154,7 +154,7 @@
     "\n",
     "[Qiskit Runtime's Sampler](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler) runs the circuit multiple times on a quantum device, performing measurements on each run, and reconstructing the probability distribution from the recovered bit strings. The more runs (or shots) it performs, the more accurate the results will be, but this requires more time and quantum resources. Specifically, it calculates the probability of obtaining each possible standard basis state by measuring the state prepared by the circuit.\n",
     "\n",
-    "[Qiskit Runtime's Estimator](https://docs.www-dev.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator) uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables with known eigenbases.\n",
+    "[Qiskit Runtime's Estimator](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator) uses a complex algebraic process to estimate the expectation value on a real quantum device by breaking down the observable into a combination of other observables with known eigenbases.\n",
     "\n",
     "The Execute step is also when we can select *error mitigation* strategy. *Error mitigation* refers to techniques that allow users to reduce circuit errors by modeling the device noise that was present at the time of execution. Typically, this results in quantum pre-processing overhead related to model training and classical post-processing overhead to mitigate errors in the raw results by using the generated model. In exchange for this overhead, we're able to get much more accurate results.\n",
     "\n",
