--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -1,22 +1,26 @@
 ---
 title: Tutorials
-description: Browse tutorials on utility-scale workflows or Qiskit capabilities and learn how to use Qiskit to common use cases.
+description: Browse tutorials on utility-scale workflows or Qiskit capabilities, and learn how to use Qiskit for common use cases.
 ---
 
 # Tutorials
 
-Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. You can browse tutorials by workflow or capability in the left navigation bar. The section on workflows towards utility contains end-to-end examples of using the quantum computer to solve a real-world problem. We focus on examples of algorithms which are promising candidates for achieving computational advantage of a quantum computer versus a classical computer. The section on Qiskit capabilities contains examples of leveraging the latest and most advanced techniques present in Qiskit and its ecosystem to improve part or the whole of a particular workflow.
+Use these tutorials to learn how to apply Qiskit to common quantum computing use cases. 
+- The section on workflows toward utility contains end-to-end examples of using a quantum computer to solve real-world problems. These tutorials focus on algorithms that are promising candidates for achieving computational advantage by a quantum computer over a classical computer. 
+- The section on Qiskit capabilities contains examples that use the latest and most advanced techniques in the Qiskit ecosystem to improve part or the whole of a particular workflow.
 
 
-## Explore workflows towards utility
+## Explore workflows toward utility
 
-Tutorials in this section cover large scale demonstrations of quantum algorithms. These are classified into three categories: Verifiable sampling algorithms, Observable estimation and Fault tolerant algorithms. 
+Tutorials in this section cover large scale demonstrations of quantum algorithms.
 
 
 <details>
   <summary>**Verifiable sampling algorithms**</summary>
 
-The algorithms in this category focus on quantum circuits whose output distributions encode solutions to structured problems and whose output can be validated. Verifiability here refers to the ability to check consistency between measured data either through evaluating the chosen bitstring or knowledge that false positive are known to not occur. The tutorials highlight techniques where repeated sampling enables estimation of problem-specific quantities (e.g., cost function values or spectral weights). These methods are particularly relevant for optimization and simulation tasks with symmetries.
+The algorithms in this category focus on quantum circuits whose output distributions encode solutions to structured problems with verifiable output. Verifiability means that you can check the consistency between measured data, either through evaluating the chosen bitstring or by knowing that false positives do not occur. 
+
+The tutorials highlight techniques where repeated sampling enables estimation of problem-specific quantities (for example, cost function values or spectral weights). These methods are particularly relevant for optimization and simulation tasks with symmetries.
 
 * [Sample-based quantum diagonalization of a chemistry Hamiltonian](/docs/tutorials/sample-based-quantum-diagonalization)
 
@@ -24,7 +28,7 @@ The algorithms in this category focus on quantum circuits whose output distribut
 
 * [Quantum approximate optimization algorithm](/docs/tutorials/quantum-approximate-optimization-algorithm)
 
-* [Advanced Techniques for QAOA](/docs/tutorials/advanced-techniques-for-qaoa)
+* [Advanced techniques for QAOA](/docs/tutorials/advanced-techniques-for-qaoa)
 
 * [Pauli Correlation Encoding to reduce Maxcut requirements](/docs/tutorials/pauli-correlation-encoding-for-qaoa)
 
@@ -36,7 +40,7 @@ The algorithms in this category focus on quantum circuits whose output distribut
 <details>
   <summary>**Observable estimation**</summary>
 
-These tutorials focus on estimating physically meaningful quantities—such as energy or correlation values—by preparing quantum states and measuring observables. Techniques include both variational and trotterized circuit approaches that balance circuit expressiveness with circuit-depth efficiency. Emphasis in our development is placed on workflows that reduce quantum resource demands while maintaining accuracy, enabling practical estimation of observables in chemical and physical systems.
+These tutorials focus on estimating physically meaningful quantities, such as energy or correlation values, by preparing quantum states and measuring observables. Techniques include both variational and Trotterized circuit approaches that balance circuit expressiveness with circuit-depth efficiency. Emphasis is placed on workflows that reduce quantum resource demands while maintaining accuracy, and enabling practical estimation of observables in chemical and physical systems.
 
 * [Krylov quantum diagonalization of lattice Hamiltonians](/docs/tutorials/krylov-quantum-diagonalization)
 
@@ -57,7 +61,7 @@ These tutorials focus on estimating physically meaningful quantities—such as e
 <details>
   <summary>**Fault tolerant algorithms**</summary>
 
-This section features algorithms with well-defined theoretical guarantees that are designed to run on future error-corrected quantum hardware. The circuits or sampling overhead for these algorithms scale in a manner which is not depth-efficient and are thereby more likely to demonstrate quantum advantage when there exist a fault-tolerant quantum computer. Tutorials illustrate how these methods operate in idealized settings and have demonstration for small scale examples.
+This section features algorithms with well-defined theoretical guarantees that are designed to run on future error-corrected quantum hardware. The circuits or sampling overhead for these algorithms scale in a manner that is not depth-efficient and are thereby are more likely to demonstrate quantum advantage when fault-tolerant quantum computers exist. These tutorials illustrate how the methods operate in idealized settings and demonstrate small scale examples.
 
 * [Grover's algorithm](/docs/tutorials/grovers-algorithm)
 
@@ -73,11 +77,11 @@ This section introduces advanced capabilities within the Qiskit ecosystem that e
 <details>
   <summary>**Workload optimization**</summary>
 
-Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving manipulating quantum circuits. 
+Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving quantum circuit manipulation. 
 
 * [Qiskit AI-powered transpiler service introduction](/docs/tutorials/ai-transpiler-introduction)
 
-* [Transpilation Optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre)
+* [Transpilation optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre)
 
 * [Compare transpiler settings](/docs/tutorials/circuit-transpilation-settings)
 
@@ -89,7 +93,7 @@ Workload optimization focuses on either efficient orchestration of classical and
 <details>
   <summary>**Addons**</summary>
 
-Addons enable advanced circuit manipulation —such as cutting, backpropagating observables, or approximating circuits— that allow users to sidestep hardware limitations at the cost of increased classical compute overhead.
+Addons enable advanced circuit manipulation, such as cutting, backpropagating observables, or approximating circuits, that allow users to sidestep hardware limitations at the cost of increased classical compute overhead.
 
 * [Approximate quantum compilation for time evolution circuits](/docs/tutorials/approximate-quantum-compilation-for-time-evolution)
 
@@ -107,7 +111,7 @@ Addons enable advanced circuit manipulation —such as cutting, backpropagating 
 <details>
   <summary>**Error mitigation**</summary>
 
-Error mitigation addresses the challenge of noise without full fault tolerance by recovering accurate expectation values through controlled circuit manipulation and post processing. 
+Error mitigation addresses the challenge of noise without full fault tolerance by recovering accurate expectation values through controlled circuit manipulation and post-processing. 
 
 * [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification)
 
