Fix broken links

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -180,10 +180,11 @@ To leave an instance, visit the instance list on your [Account page.](https://qu
 
 ![Screenshot of the Account page.](/docs/images/guides/instances/leaving1.avif "Leave instance")
 </LegacyContent>
-
+<CloudContent>
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
     - [Work with access groups](/docs/guides/access-groups)
     - [Manage users.](/docs/guides/invite-and-manage-users)
 </Admonition>
+</CloudContent>
