Add admonition about pyscf

--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -35,6 +35,14 @@
    "id": "609913a6",
    "metadata": {},
    "source": [
+    "<Admonition type=\"caution\" title=\"Note for Windows users\">\n",
+    "\n",
+    "This example uses the `pyscf` package, a Python based chemistry simulation library which is not natively supported on Windows (and therefore the examples below will not work).\n",
+    "\n",
+    "In order to execute the code snippets below, you will need to create a python environment using the Windows Subsystem for Linux as suggested in the [`pyscf` install guide.](https://pyscf.org/install.html)\n",
+    "\n",
+    "</Admonition>\n",
+    "\n",
     "This guide demonstrates a simple working example to get started with the `qiskit-addons-sqd` package. In this example, you can use SQD to obtain an approximation of the ground state of the $N_2$ molecule at equilibrium.\n",
     "\n",
     "To begin, recall that the generic interacting-electron Hamiltonian has the form:\n",
@@ -42,6 +50,16 @@
     "$$ \\hat{H} = \\sum_{\\substack{pr\\\\ \\sigma}}h_{pr} \\hat{a}_{p\\sigma}^\\dagger \\hat{a}_{r\\sigma} + \\sum_{\\substack{prqs\\\\ \\sigma\\tau}} \\frac{1}{2}\\left(pr|qs\\right)\\hat{a}_{p\\sigma}^\\dagger \\hat{a}_{q\\tau}^\\dagger \\hat{a}_{s\\tau}\\hat{a}_{r\\sigma} $$\n",
     "\n",
     "where $\\hat{a}_{p\\sigma}^\\dagger$ and $\\hat{a}_{p\\sigma}$ are the Fermionic creation and annihilation operators associated with the $p$-th orbital with spin $\\sigma$ and $h_{pr}$ and $\\left(pr|qs\\right)$ are the one and two-body electronic integrals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf007314-cc6b-4dcf-8678-5fd73df44b34",
+   "metadata": {},
+   "source": [
+    "## Prepare molecule information\n",
+    "\n",
+    "To begin, specify the molecule and its properties using `pyscf` and the electronic integrals stored in `n2_fci.txt`."
    ]
   },
   {
@@ -1673,16 +1691,6 @@
     " -77.40622425962903  0  0  0  0\n",
     " ```\n",
     " </details>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf007314-cc6b-4dcf-8678-5fd73df44b34",
-   "metadata": {},
-   "source": [
-    "## Prepare molecule information\n",
-    "\n",
-    "To begin, specify the molecule and its properties using `pyscf` and the electronic integrals stored in `n2_fci.txt`."
    ]
   },
   {
