Apply suggestions from code review

--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -37,9 +37,9 @@
    "source": [
     "<Admonition type=\"caution\" title=\"Note for Windows users\">\n",
     "\n",
-    "This example uses the `pyscf` package, a Python based chemistry simulation library which is not natively supported on Windows (and therefore the examples below will not work).\n",
+    "This example uses the `pyscf` package, a Python-based chemistry simulation library, which is not natively supported on Windows; therefore, the examples below will not work.\n",
     "\n",
-    "In order to execute the code snippets below, you will need to create a python environment using the Windows Subsystem for Linux as suggested in the [`pyscf` install guide.](https://pyscf.org/install.html)\n",
+    "In order to execute the code snippets below, Windows users need to create a Python environment using the Windows Subsystem for Linux, as suggested in the [`pyscf` install guide.](https://pyscf.org/install.html)\n",
     "\n",
     "</Admonition>\n",
     "\n",
