--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -57,7 +57,7 @@
    "id": "95b2f280-f685-455f-83e9-b172445d7c6a",
    "metadata": {},
    "source": [
-    "Qiskit Serverless allows you to manage compute and data across your [Qiskit pattern](./intro-to-patterns), including CPUs, QPUs, and other compute accelerators."
+    "With Qiskit Serverless, you can manage compute and data across your [Qiskit pattern](/docs/guides/intro-to-patterns), including CPUs, QPUs, and other compute accelerators."
    ]
   },
   {
@@ -65,17 +65,17 @@
    "id": "380354c0-5cab-464d-b10f-c94055de3605",
    "metadata": {},
    "source": [
-    "## Setting detailed statuses\n",
+    "## Set detailed statuses\n",
     "\n",
     "\n",
     "Serverless workloads have several stages across a workflow. By default, the following statuses are viewable with `job.status()`:\n",
     "\n",
     "- **`QUEUED`**: the workload is queued for classical resources\n",
-    "- **`INITIALIZING`**: the workload is setup\n",
+    "- **`INITIALIZING`**: the workload is set up\n",
     "- **`RUNNING`**: the workload is currently running on classical resources\n",
-    "- **`DONE`**: the workload is completed successfully\n",
+    "- **`DONE`**: the workload has successfully completed\n",
     "\n",
-    "You can also set custom statuses that further describe the specific workflow stage as shown below"
+    "You can also set custom statuses that further describe the specific workflow stage, as follows."
    ]
   },
   {
@@ -90,7 +90,7 @@
     "## If your function has a mapping stage, particularly application functions, you can set the status to \"RUNNING: MAPPING\" as follows:\n",
     "update_status(Job.MAPPING)\n",
     "\n",
-    "## While handling transpilation, error suppression, etc, you can set the status to \"RUNNING: OPTIMIZING_FOR_HARDWARE\":\n",
+    "## While handling transpilation, error suppression, and so forth, you can set the status to \"RUNNING: OPTIMIZING_FOR_HARDWARE\":\n",
     "update_status(Job.OPTIMIZING_HARDWARE)\n",
     "\n",
     "## After you submit jobs to Qiskit Runtime, the underlying quantum job will be queued. You can set status to \"RUNNING: WAITING_FOR_QPU\":\n",
@@ -99,7 +99,7 @@
     "## When the Qiskit Runtime job starts running on the QPU, set the following status \"RUNNING: EXECUTING_QPU\":\n",
     "update_status(Job.EXECUTING_QPU)\n",
     "\n",
-    "## Once QPU is completed, and post processing has begun, set the status \"RUNNING: POST_PROCESSING\":\n",
+    "## Once QPU is completed and post-processing has begun, set the status \"RUNNING: POST_PROCESSING\":\n",
     "update_status(Job.POST_PROCESSING)"
    ]
   },
@@ -231,7 +231,7 @@
     "    for circuit in arguments.get(\"circuit_list\")\n",
     "]\n",
     "\n",
-    "tranpsiled_circuits = get(transpile_worker_references)\n",
+    "transpiled_circuits = get(transpile_worker_references)\n",
     "end_time = time.time()"
    ]
   },
@@ -245,7 +245,7 @@
     "# Save result, with metadata\n",
     "\n",
     "result = {\n",
-    "    \"circuits\": tranpsiled_circuits,\n",
+    "    \"circuits\": transpiled_circuits,\n",
     "    \"metadata\": {\n",
     "        \"resource_usage\": {\n",
     "            \"RUNNING: OPTIMIZING_FOR_HARDWARE\": {\n",
