Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -268,7 +268,18 @@
    "execution_count": null,
    "id": "2792b0c3-965a-4da8-97da-7a2dd0558612",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d76b6abf-3a16-4dd6-a9ac-a7ffa780d2f7'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "job = ibm_cf.run(\n",
     "    pubs=[(circuit, observable)],\n",
@@ -427,15 +438,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get the most recent job that has been executed.\n",
+    "# First, get the most recent job that has been executed.\n",
     "latest_job = old_jobs[0]\n",
+    "\n",
+    "# We can also get that same job with get_job_by_id\n",
     "job_by_id = catalog.get_job_by_id(latest_job.job_id)\n",
     "\n",
-    "# Verify that the job ID is the same using both retrieval methods.\n",
-    "assert job_by_id.job_id == latest_job.job_id\n",
+    "# Verify that the job is the same using both retrieval methods.\n",
+    "assert job_by_id == latest_job\n",
     "\n",
-    "# Print the job_id for the latest job.\n",
-    "print(latest_job)"
+    "# Print the job_id for this job.\n",
+    "print(job_by_id.job_id)"
    ]
   },
   {
