--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -434,7 +434,7 @@
    "id": "af7fa72a-f272-43ff-800d-5ae37dd42b2b",
    "metadata": {},
    "source": [
-    "To retrieve a job's job_id by its position in the list, use `catalog.get_job_by_id()`:"
+    "If you already have the job ID for a certain job, you can retrieve the job with `catalog.get_job_by_id()`:"
    ]
   },
   {
