Add missing thumbnails

--- a/learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb
+++ b/learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb
@@ -7,6 +7,15 @@
    "source": [
     "# Which problems are quantum computers good for?\n",
     "\n",
+    "\n",
+    "<ImageLink\n",
+    "  title=\"What Are Quantum Computers Good For?\"\n",
+    "  alt=\"Video thumbnail\"\n",
+    "  href=\"https://youtu.be/33QmsXhIlpU\"\n",
+    "  src=\"/learning/images/courses/quantum-computing-in-practice/applications-of-qc/youtube-thumbnail.avif\"\n",
+    "/>\n",
+    "\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "In the previous lesson, we tackled a single problem in-depth – solving the Max-Cut optimization problem using the QUBO formulation. Today we are going to take a different approach and discuss near-term applications more broadly. We'll start by giving you a sense for how we decide on the types of problems we think might benefit from a quantum solution. Then, we'll look at some recent examples of work done in our community. This will help you start to develop an intuition for different types of quantum computing problems and how we approach solving them.\n",
