Use direct youtube links

--- a/docs/tutorials/chsh-inequality.ipynb
+++ b/docs/tutorials/chsh-inequality.ipynb
@@ -133,7 +133,7 @@
     "<ImageLink\n",
     "  title=\"Entanglement in Action | Understanding Quantum Information & Computation - Lesson 04\"\n",
     "  alt=\"Video thumbnail: John Watrous stands against a blue background.\"\n",
-    "  href=\"https://youtu.be/GSsElSQgMbU?&t=2426\"\n",
+    "  href=\"https://youtube.com/watch?v=GSsElSQgMbU&t=2426\"\n",
     "  src=\"/docs/images/tutorials/chsh-inequality/youtube-thumbnail.avif\"\n",
     "/>"
    ]
