--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -11,7 +11,7 @@
     "<ImageLink\n",
     "  title=\"Run Large-Scale Quantum Circuits (100+ Qubits Explained)\"\n",
     "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/sVRpKhCfKRI\"\n",
+    "  href=\"https://youtube.com/watch?v=sVRpKhCfKRI\"\n",
     "  src=\"/learning/images/courses/quantum-computing-in-practice/introduction/youtube-thumbnail.avif\"\n",
     "/>\n",
     "\n",
