--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -13,7 +13,7 @@
     "<ImageLink\n",
     "  title=\"Solving MaxCut with QAOA: Quantum Tutorial for 100+ Qubits\"\n",
     "  alt=\"Video thumbnail\"\n",
-    "  href=\"https://youtu.be/P3s7TIMIvZ0\"\n",
+    "  href=\"https://youtube.com/watch?v=P3s7TIMIvZ0\"\n",
     "  src=\"/learning/images/courses/quantum-computing-in-practice/utility-scale-qaoa/youtube-thumbnail.avif\"\n",
     "/>\n",
     "\n",
