--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 24 April 2025*
+*Last updated 8 May 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -29,6 +29,16 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 
 This section summarizes the recent enhancements and new features for IBM Quantum Platform.
 
+**8 May 2025**
+
+- Released Flex Plan offering - a new resource consumption offering.
+- [Tutorials](https://quantum.cloud.ibm.com/docs/tutorials) are now available on the new platform to help users with use-case exploration.
+- Updated Session OpenAPI schema: `backend_name` field is now nullable.
+- Launched the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) on the new platform.
+
+<details>
+<summary><b>Previous updates</b></summary>
+
 **24 April 2025**
 
 - Instance limits: Individuals can view [available time and usage,](https://quantum.cloud.ibm.com/instances) which displays alerts when approaching limits.
@@ -42,9 +52,6 @@ This section summarizes the recent enhancements and new features for IBM Quantum
   - Improved platform stability by improving error handling and better recovery.
   - Addressed an issue that prevented QPU metrics to be displayed for the QPUs in the eu-de region.
 - Deprecation reminder: The deprecation date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide.](/docs/migration-guides/classic-iqp-to-cloud-iqp)
-
-<details>
-<summary><b>Previous updates</b></summary>
 
 **10 April 2025**
 
